--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -4,7 +4,7 @@
 $use-encapsulation: false !default;
 
 @mixin -text-primer {
-  color: core.$text;
+  color: core.$grey-900;
   font-size: 1rem;
   font-family: core.$font-body;
   font-weight: 400;
@@ -45,7 +45,7 @@ $use-encapsulation: false !default;
   }
 
   .link {
-    background-color: core.$link;
+    background-color: core.$utility-500;
   }
 
   .purple {
@@ -61,7 +61,7 @@ $use-encapsulation: false !default;
   h6 {
     font-weight: core.$font-weight-bold;
     line-height: core.$line-height-h;
-    color: core.$purple-500;
+    color: core.$grey-900;
   }
 
   h1 {
@@ -118,7 +118,7 @@ $use-encapsulation: false !default;
   blockquote {
     margin: core.$space-none core.$space-none core.$space-l;
     padding-left: core.$space-l;
-    border-left: 6px solid core.$text;
+    border-left: 6px solid core.$grey-900;
     font-family: core.$font-accent;
     font-style: italic;
     font-size: core.$font-size-xl;
@@ -158,13 +158,15 @@ $use-encapsulation: false !default;
   }
 
   a {
-    color: core.$link;
-    text-decoration: none;
-    transition: 0.2s color;
+    color: core.$purple-500;
+    font-weight: core.$font-weight-medium;
+    text-decoration: underline;
+    transition: all 200ms ease-out;
+    display: inline-block;
 
     &:hover {
-      color: core.$link;
-      text-decoration: underline;
+      color: core.$white;
+      background-color: core.$purple-500;
     }
   }
 
@@ -368,12 +370,12 @@ $use-encapsulation: false !default;
 
   // Footer
   .legacy-footer {
-    color: core.$text !important;
+    color: core.$grey-900 !important;
     background: none !important;
 
     a,
     .legacy-footer__sub-title {
-      color: core.$text !important;
+      color: core.$grey-900 !important;
     }
 
     &__container {
@@ -381,7 +383,7 @@ $use-encapsulation: false !default;
     }
 
     &__acknowledgement {
-      color: core.$text !important;
+      color: core.$grey-900 !important;
       padding-bottom: 0 !important;
       margin-bottom: 1rem !important;
       font-size: 14px !important;
