--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -82,13 +82,13 @@
 // Dark
 %dark-palette {
   border-color: $grey-50;
-  color: $text;
+  color: $grey-900;
 
   a {
-    color: $link;
+    color: $utility-500;
 
     &:hover {
-      color: $link-hover;
+      color: $utility-600;
     }
   }
 }
