--- a/packages/header-legacy/src/scss/_component.scss
+++ b/packages/header-legacy/src/scss/_component.scss
@@ -226,8 +226,8 @@
       position: absolute;
 
       &:focus {
-        border-color: core.$link;
-        box-shadow: 0 0 0 1px core.$link;
+        border-color: core.$utility-500;
+        box-shadow: 0 0 0 1px core.$utility-500;
         outline: none;
       }
 
@@ -263,8 +263,8 @@
         }
 
         &:focus {
-          border-color: core.$link;
-          box-shadow: 0 0 0 1px core.$link;
+          border-color: core.$utility-500;
+          box-shadow: 0 0 0 1px core.$utility-500;
         }
       }
     }
@@ -305,12 +305,12 @@
         font-family: sans-serif;
         font-size: core.$font-size-m;
         line-height: 1;
-        color: core.$text;
+        color: core.$grey-900;
         height: auto;
         outline: none;
 
         &:focus {
-          border-color: core.$link;
+          border-color: core.$utility-500;
           outline: none;
         }
       }
