--- a/packages/pagination/src/scss/_component.scss
+++ b/packages/pagination/src/scss/_component.scss
@@ -14,25 +14,26 @@
     list-style: none;
 
     .uq-pagination__link {
-      color: core.$link;
+      color: core.$utility-500;
       font-size: 1rem;
       font-weight: 300;
       padding: core.$space-none core.$space-s;
       text-decoration: none;
 
       &:hover {
-        color: core.$link-hover;
+        background-color: transparent;
+        color: core.$utility-600;
         text-decoration: underline;
       }
     }
 
     &--current {
       .uq-pagination__link {
-        color: core.$text;
+        color: core.$grey-900;
         font-weight: 500;
 
         &:hover {
-          color: core.$text;
+          color: core.$grey-900;
           text-decoration: none;
         }
       }
@@ -40,7 +41,7 @@
   }
 
   &__ellipsis {
-    color: core.$text;
+    color: core.$grey-900;
     display: inline-block;
     list-style: none;
   }
