--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -3,7 +3,7 @@
 @use "global" as *;
 
 .uq-side-nav {
-  color: core.$text;
+  color: core.$grey-900;
   border-top: core.$space-xs solid core.$purple-500;
   box-sizing: border-box;
   font-family: core.$font-body;
@@ -78,11 +78,13 @@
       .uq-side-nav__link {
         display: block;
         padding: core.$space-m core.$space-l;
-        color: core.$text;
+        color: core.$grey-900;
         text-decoration: none;
+        font-weight: core.$font-weight-normal;
 
         &:hover,
         &:focus {
+          background-color: transparent;
           text-decoration: underline;
         }
       }
@@ -91,6 +93,14 @@
         &--active {
           .uq-side-nav__link {
             font-weight: core.$font-weight-medium;
+          }
+        }
+      }
+
+      &--open {
+        & > .uq-side-nav__link {
+          &:hover {
+            background-color: core.$grey-50;
           }
         }
       }
