--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -45,7 +45,7 @@
     margin-right: core.$space-xs;
     font-size: core.$font-size-m;
     font-weight: core.$font-weight-thin;
-    color: core.$text;
+    color: core.$grey-900;
     background-color: core.$white;
     border-radius: core.$space-xs core.$space-xs core.$space-none
       core.$space-none;
@@ -53,11 +53,18 @@
     text-align: center;
     white-space: nowrap;
     cursor: pointer;
+    text-decoration: none;
 
     @media #{core.$screen-md-up} {
       padding: core.$space-l core.$space-xl;
       margin-right: core.$space-xs;
       font-size: core.$font-size-l;
+    }
+
+    &:hover {
+      color: core.$grey-900;
+      background-color: core.$white;
+      text-decoration: underline;
     }
 
     &:last-child {
@@ -97,7 +104,7 @@
   &__tab-panel {
     padding: core.$space-m core.$space-l;
     font-size: core.$font-size-m;
-    color: core.$text;
+    color: core.$grey-900;
     background-color: core.$white;
 
     @media #{core.$screen-md-up} {
