fix Fixing apps map icons styles

--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -126,7 +126,7 @@ $-result-icon-spacing: $-icon-spacing;
       @extend %uq-maps__primary-text;
 
       appearance: none;
-      background-image: url(get-icon("ui--search"));
+      background-image: url(get-icon("ui--search", core.$purple-500));
       background-position: core.$space-s +
         ($-icon-button-width - $-icon-button-icon-width) * 0.5 center;
       background-color: transparent;
@@ -162,7 +162,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &__back {
-      background-image: url(get-icon("ui--arrow-left"));
+      background-image: url(get-icon("ui--arrow-left", core.$purple-500));
       margin-left: core.$space-s;
 
       &:hover {
@@ -174,7 +174,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &__clear {
-      background-image: url(get-icon("ui--close"));
+      background-image: url(get-icon("ui--close", core.$purple-500));
       margin-right: core.$space-s;
 
       &:hover {
@@ -316,7 +316,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &__back {
-      background-image: url(get-icon("ui--arrow-left"));
+      background-image: url(get-icon("ui--arrow-left", core.$purple-500));
 
       &:hover {
         background-image: url(get-icon(
@@ -327,7 +327,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &__swap {
-      background-image: url(get-icon("ui--swap"));
+      background-image: url(get-icon("ui--swap", core.$purple-500));
 
       &:hover {
         background-image: url(get-icon(
@@ -374,7 +374,7 @@ $-result-icon-spacing: $-icon-spacing;
           border-color: core.$link;
 
           &::after {
-            background-image: url(get-icon("ui--check", #fff));
+            background-image: url(get-icon("ui--check", core.$white));
           }
         }
 
@@ -713,7 +713,7 @@ $-result-icon-spacing: $-icon-spacing;
       &__close {
         @extend %uq-maps__icon-button;
 
-        background-image: url(get-icon("ui--arrow-down"));
+        background-image: url(get-icon("ui--arrow-down", core.$purple-500));
       }
     }
 
@@ -766,7 +766,7 @@ $-result-icon-spacing: $-icon-spacing;
     $icon-size: 1.75rem;
 
     appearance: none;
-    background-image: url(get-icon("logo--uq-shield"));
+    background-image: url(get-icon("logo--uq-shield", core.$purple-500));
     background-size: $icon-size;
     background-color: transparent;
     background-repeat: no-repeat;
