feat: update missed teaching and exchange collab link in header story and private-design-output

--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -117,7 +117,7 @@
                     <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Partners and community > Research partnerships">Research partnerships</a></li>
-                        <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Global partnerships​">Global partnerships​</a></li>
+                        <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
                         <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Student work placements and internships​">Student work placements and internships​</a></li>
                         <li><a href="https://about.uq.edu.au/initiatives/2032-games" data-gtm-label="Partners and community > Office of 2032 Games Engagement">Office of 2032 Games Engagement</a></li>
                       </ul>
@@ -299,7 +299,7 @@
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Industry partnerships</a>
             <ul>
               <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Partners and community > Research partnerships">Research partnerships</a></li>
-              <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Global partnerships​">Global partnerships​</a></li>
+              <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
               <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Student work placements and internships​">Student work placements and internships​</a></li>
               <li><a href="https://about.uq.edu.au/initiatives/2032-games" data-gtm-label="Partners and community > Office of 2032 Games Engagement">Office of 2032 Games Engagement​</a></li>
             </ul>
