fix: additional qld commitment and sport link updates

--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -133,6 +133,7 @@
                         <li><a href="https://study.uq.edu.au/information-resources/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
                         <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement​">Indigenous engagement​</a></li>
                         <li><a href="https://www.uq.edu.au/about/sponsorships" data-gtm-label="Partners and community > Community sponsorships​">Community sponsorships​</a></li>
+                        <li><a href="https://about.uq.edu.au/initiatives/queensland-commitment" data-gtm-label="Partners and community > The Queensland Commitment">The Queensland Commitment</a></li>
                      </ul>
                     </div>
                   </div>
@@ -143,7 +144,7 @@
                         <li><a href="https://partners-community.uq.edu.au/arts" data-gtm-label="Partners and community > Arts and culture​">Arts and culture​</a></li>
                         <li><a href="https://campuses.uq.edu.au" data-gtm-label="Partners and community > Explore our campuses​">Explore our campuses​</a></li>
                         <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Services and shops​">Services and shops​</a></li>
-                        <li><a href="https://uqsport.com.au" data-gtm-label="Partners and community > Sport and recreation facilities​">Sport and recreation facilities​</a></li>
+                        <li><a href="https://about.uq.edu.au/sport-recreation-precinct" data-gtm-label="Partners and community > Sport and recreation facilities​">Sport and recreation facilities​</a></li>
                         <li><a href="https://about.uq.edu.au/venues" data-gtm-label="Partners and community > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
                       </ul>
                     </div>
@@ -313,6 +314,7 @@
               <li><a href="https://study.uq.edu.au/information-resources/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
               <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement​">Indigenous engagement​</a></li>
               <li><a href="https://www.uq.edu.au/about/sponsorships" data-gtm-label="Partners and community > Community sponsorships​">Community sponsorships​</a></li>
+              <li><a href="https://about.uq.edu.au/initiatives/queensland-commitment" data-gtm-label="Partners and community > The Queensland Commitment">The Queensland Commitment</a></li>
             </ul>
           </li>
           <li>
@@ -321,7 +323,7 @@
               <li><a href="https://partners-community.uq.edu.au/arts" data-gtm-label="Partners and community > Arts and culture​">Arts and culture​</a></li>
               <li><a href="https://campuses.uq.edu.au" data-gtm-label="Partners and community > Explore our campuses​">Explore our campuses​</a></li>
               <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Services and shops​">Services and shops​</a></li>
-              <li><a href="https://uqsport.com.au" data-gtm-label="Partners and community > Sport and recreation facilities​">Sport and recreation facilities​</a></li>
+              <li><a href="https://about.uq.edu.au/sport-recreation-precinct" data-gtm-label="Partners and community > Sport and recreation facilities​">Sport and recreation facilities​</a></li>
               <li><a href="https://about.uq.edu.au/venues" data-gtm-label="Partners and community > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
             </ul>
           </li>
