--- a/packages/card/src/scss/_card.scss
+++ b/packages/card/src/scss/_card.scss
@@ -135,7 +135,7 @@
       flex-direction: row;
 
       &::after {
-        padding-top: 0;
+        height: 24px;
         margin-top: 0;
         margin-left: auto;
       }
