--- a/packages/storybook-html/stories/components/button/button.scss
+++ b/packages/storybook-html/stories/components/button/button.scss
@@ -1,1 +1,2 @@
-@import "@uqds/button/src/scss/_component";
+@use "@uqds/button/src/scss/_component" as *;
+@use "@uqds/icon/src/scss/_component" as *;
