--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -113,38 +113,39 @@
                 <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Partners and community > Partners and community overview">Partners and community overview</a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
-                    <div class="megamenu__heading">Partner with us</div>
+                    <div class="megamenu__heading">Industry partnerships</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Partnership opportunities">Partnership opportunities</a></li>
                         <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Partners and community > Research partnerships">Research partnerships</a></li>
-                        <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Work placements and internships">Work placements and internships</a></li>
                         <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
-                        <li><a href="https://about.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorship">Sponsorship</a></li>
+                        <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Student work placements and internships​">Student work placements and internships​</a></li>
+                        <li><a href="https://about.uq.edu.au/initiatives/2032-games" data-gtm-label="Partners and community > Office of 2032 Games Engagement">Office of 2032 Games Engagement</a></li>
                       </ul>
                     </div>
                   </div>
                   <div class="megamenu__column">
-                    <div class="megamenu__heading">Our communities</div>
+                    <div class="megamenu__heading">Community engagement​</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni community">Alumni community</a></li>
+                        <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni">Alumni</a></li>
                         <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Giving and philanthropy">Giving and philanthropy</a></li>
-                        <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
+                        <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Volunteering​">Volunteering​</a></li>
                         <li><a href="https://study.uq.edu.au/information-resources/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
-                        <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Community engagement and volunteering">Community engagement and volunteering</a></li>
-                        <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Community facilities and services">Community facilities and services</a></li>
+                        <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement​">Indigenous engagement​</a></li>
+                        <li><a href="https://www.uq.edu.au/about/sponsorships" data-gtm-label="Partners and community > Community sponsorships​">Community sponsorships​</a></li>
+                        <li><a href="https://about.uq.edu.au/initiatives/queensland-commitment" data-gtm-label="Partners and community > The Queensland Commitment">The Queensland Commitment</a></li>
                      </ul>
                     </div>
                   </div>
                   <div class="megamenu__column">
-                    <div class="megamenu__heading">Information for</div>
+                    <div class="megamenu__heading">Our facilities</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni">Alumni</a></li>
-                        <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Donors">Donors</a></li>
-                        <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Business and industry">Business and industry</a></li>
-                        <li><a href="https://www.uq.edu.au/news" data-gtm-label="Partners and community > Media">Media</a></li>
+                        <li><a href="https://partners-community.uq.edu.au/arts" data-gtm-label="Partners and community > Arts and culture​">Arts and culture​</a></li>
+                        <li><a href="https://campuses.uq.edu.au" data-gtm-label="Partners and community > Explore our campuses​">Explore our campuses​</a></li>
+                        <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Services and shops​">Services and shops​</a></li>
+                        <li><a href="https://about.uq.edu.au/sport-recreation-precinct" data-gtm-label="Partners and community > Sport and recreation facilities​">Sport and recreation facilities​</a></li>
+                        <li><a href="https://about.uq.edu.au/venues" data-gtm-label="Partners and community > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
                       </ul>
                     </div>
                   </div>
@@ -164,9 +165,9 @@
                         <li><a href="https://about.uq.edu.au/university-profile" data-gtm-label="About > Introducing UQ">Introducing UQ</a></li>
                         <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
                         <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
-                        <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Initiatives">Initiatives</a></li>
+                        <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
                         <li><a href="https://about.uq.edu.au/organisation" data-gtm-label="About > Organisational structure and governance">Organisational structure and governance</a></li>
-                        <li><a href="https://ppl.app.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
+                        <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
                         <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
                       </ul>
                     </div>
@@ -178,6 +179,7 @@
                         <li><a href="https://campuses.uq.edu.au" data-gtm-label="About > Campuses, maps and transport">Campuses, maps and transport</a></li>
                         <li><a href="https://my.uq.edu.au/student-support/accommodation" data-gtm-label="About > Colleges and accommodation">Colleges and accommodation</a></li>
                         <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="About > Community facilities and services">Community facilities and services</a></li>
+                        <li><a href="https://about.uq.edu.au/venues" data-gtm-label="About > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
                       </ul>
                     </div>
                   </div>
@@ -295,33 +297,34 @@
             <a href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community > Partners and community overview">Partners and community overview</a>
           </li>
           <li>
-            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Industry partnerships</a>
             <ul>
-              <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Partnership opportunities">Partnership opportunities</a></li>
               <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Partners and community > Research partnerships">Research partnerships</a></li>
-              <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Work placements and internships">Work placements and internships</a></li>
               <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
-              <li><a href="https://about.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorship">Sponsorship</a></li>
+              <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Student work placements and internships​">Student work placements and internships​</a></li>
+              <li><a href="https://about.uq.edu.au/initiatives/2032-games" data-gtm-label="Partners and community > Office of 2032 Games Engagement">Office of 2032 Games Engagement​</a></li>
             </ul>
           </li>
           <li>
-            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our communities</a>
-            <ul>
-              <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni community">Alumni community</a></li>
-              <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Giving and philanthropy">Giving and philanthropy</a></li>
-              <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
-              <li><a href="https://study.uq.edu.au/information-resources/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
-              <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Community engagement and volunteering">Community engagement and volunteering</a></li>
-              <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Community facilities and services">Community facilities and services</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Community engagement​</a>
             <ul>
               <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni">Alumni</a></li>
-              <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Donors">Donors</a></li>
-              <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Business and industry">Business and industry</a></li>
-              <li><a href="https://www.uq.edu.au/news" data-gtm-label="Partners and community > Media">Media</a></li>
+              <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Giving and philanthropy">Giving and philanthropy</a></li>
+              <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Volunteering​">Volunteering​</a></li>
+              <li><a href="https://study.uq.edu.au/information-resources/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
+              <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement​">Indigenous engagement​</a></li>
+              <li><a href="https://www.uq.edu.au/about/sponsorships" data-gtm-label="Partners and community > Community sponsorships​">Community sponsorships​</a></li>
+              <li><a href="https://about.uq.edu.au/initiatives/queensland-commitment" data-gtm-label="Partners and community > The Queensland Commitment">The Queensland Commitment</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our facilities</a>
+            <ul>
+              <li><a href="https://partners-community.uq.edu.au/arts" data-gtm-label="Partners and community > Arts and culture​">Arts and culture​</a></li>
+              <li><a href="https://campuses.uq.edu.au" data-gtm-label="Partners and community > Explore our campuses​">Explore our campuses​</a></li>
+              <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Services and shops​">Services and shops​</a></li>
+              <li><a href="https://about.uq.edu.au/sport-recreation-precinct" data-gtm-label="Partners and community > Sport and recreation facilities​">Sport and recreation facilities​</a></li>
+              <li><a href="https://about.uq.edu.au/venues" data-gtm-label="Partners and community > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
             </ul>
           </li>
         </ul>
@@ -338,9 +341,9 @@
               <li><a href="https://about.uq.edu.au/university-profile" data-gtm-label="About > Introducing UQ">Introducing UQ</a></li>
               <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
               <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
-              <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Initiatives">Initiatives</a></li>
+              <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
               <li><a href="https://about.uq.edu.au/organisation" data-gtm-label="About > Organisational structure and governance">Organisational structure and governance</a></li>
-              <li><a href="https://ppl.app.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
+              <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
               <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
             </ul>
           </li>
@@ -350,6 +353,7 @@
               <li><a href="https://campuses.uq.edu.au" data-gtm-label="About > Campuses, maps and transport">Campuses, maps and transport</a></li>
               <li><a href="https://my.uq.edu.au/student-support/accommodation" data-gtm-label="About > Colleges and accommodation">Colleges and accommodation</a></li>
               <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="About > Community facilities and services">Community facilities and services</a></li>
+              <li><a href="https://about.uq.edu.au/venues" data-gtm-label="About > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
             </ul>
           </li>
           <li>
