fix: add font size var for section and update filenames for section scss

--- a/packages/sections/src/scss/_sections.scss
+++ b/packages/sections/src/scss/_sections.scss
@@ -12,7 +12,7 @@
 .uq-section__title {
   margin: 0 0 core.$space-m;
   color: core.$black;
-  font-size: core.$font-size-xxxl;
+  font-size: var(--section-font-size-xxxl);
 }
 
 .uq-section__description {
