fix: reduce site header font weight for drop down menus to normal

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -220,6 +220,7 @@
 
         a {
           // border-bottom: 1px solid $nav-dropdown-divider;
+          font-weight: core.$font-weight-normal;
           padding-left: core.$space-xxxl;
           padding-top: 0.75rem;
           padding-bottom: 0;
