--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -4,7 +4,7 @@
 
 .uq-breadcrumbs {
   border-bottom: 1px solid #e2e2e2;
-  padding: 12px 0;
+  padding: core.$space-compressed-m 0;
 }
 
 .uq-breadcrumb__list {
