--- a/packages/hero/src/scss/_custom-properties.scss
+++ b/packages/hero/src/scss/_custom-properties.scss
@@ -4,6 +4,7 @@
   --hero-font-size-ul: #{core.$font-size-ul};
   --hero-font-size-xxxxl: #{core.$font-size-xxxxl};
 
+  --hero-gap: #{core.$space-ul};
   --hero-spacing: #{core.$space-uul};
   --hero-basic-spacing: #{core.$space-uuul};
 
