Removing OP var from search

--- a/packages/storybook-html/stories/components/header/header-interim.html
+++ b/packages/storybook-html/stories/components/header/header-interim.html
@@ -164,7 +164,7 @@
             <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
             <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input">
             <span class="uq-header__search-query-button">
-              <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
+              <input type="submit" value="Search" class="uq-header__search-query-submit">
             </span>
           </div>
           <div class="uq-header__search-range">
