--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -161,7 +161,9 @@ $use-encapsulation: false !default;
     color: core.$purple-500;
     font-weight: core.$font-weight-medium;
     text-decoration: underline;
-    transition: color 200ms ease-out, text-decoration 200ms ease-out,
+    transition:
+      color 200ms ease-out,
+      text-decoration 200ms ease-out,
       background-color 200ms ease-out;
     display: inline-block;
 
